--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,7 +26,7 @@ h3 {
     font-size: 6rem;
   }
 
-  &sm-heading {
+  &.sm-heading {
     margin-bottom: 2rem;
     padding: 0.2rem 1rem;
     background: rgba(lighten($color: #444, $amount: 2), 0.5);
@@ -111,6 +111,47 @@ main {
   background: lighten($color: $primary-color, $amount: 5);
   padding: 0.5rem;
   border-bottom: $secondary-color 5px solid;
+}
+
+// Projects
+.projects {
+  display: grid;
+  grid-gap: 0.7rem;
+  grid-template-columns: repeat(3, 1fr);
+
+  img {
+    width: 100%;
+    border: 3px #fff solid;
+
+    &:hover {
+      opacity: 0.5;
+      border-color: $secondary-color;
+      @include easeOut;
+    }
+  }
+}
+
+.btn {
+  display: block;
+  padding: 0.5rem 1rem;
+  border: 0;
+  margin-bottom: 0.3rem;
+  &:hover {
+    background: $secondary-color;
+    color: set-text-color($secondary-color);
+  }
+}
+
+.btn-dark {
+  @extend .btn;
+  background: darken($color: $primary-color, $amount: 50);
+  color: #fff;
+}
+
+.btn-light {
+  @extend .btn;
+  background: lighten($color: $primary-color, $amount: 50);
+  color: #fff;
 }
 
 #main-footer {
